k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mern-app
  labels:
    name: mern-app
    env: dev
